# SortVIS

./: CMakeLists.txt  bubblesort.cpp  drawarray.cpp  drawarray.hpp  insertionsort.cpp  main.cpp  quicksort.hpp  selectionsort.hpp
includes/: bubblesort.hpp  insertionsort.hpp  mergesort.hpp
src/: mergesort.cpp  quicksort.cpp  selectionsort.cpp
